[package]
name = "rsthrottled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu.dependencies]
dbus = "0.9.7"
glib = "0.20.10"

[dependencies]
flate2 = "1.1.2"
libc = "0.2.174"
log = "0.4.27"
